force-app/main/default/objects/Invoice__c/fields/Amount_In_Currency__c.field-meta.xml
<CustomField>
    <fullName>Amount_In_Currency__c</fullName>
    <description>The amount the student actually sees and pays, in the invoice currency.</description>
    <formula>Amount__c * Exchange_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount (Invoice Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>