force-app/main/default/objects/Invoice__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <label>Currency Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>GBP</fullName><default>true</default><label>GBP</label></value>
            <value><fullName>USD</fullName><default>false</default><label>USD</label></value>
            <value><fullName>EUR</fullName><default>false</default><label>EUR</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>