force-app/main/default/objects/Invoice__c/fields/Enrolment__c.field-meta.xml
<CustomField>
    <fullName>Enrolment__c</fullName>
    <label>Enrolment</label>
    <referenceTo>Enrolment__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>