force-app/main/default/objects/Invoice__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Rate applied when the invoice was issued: 1 GBP = this many units of the invoice currency. Frozen at issue time so the invoice never changes value retrospectively.</description>
    <label>Exchange Rate</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>