force-app/main/default/objects/Invoice__c/fields/Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference__c</fullName>
    <description>The transaction id returned by the payment gateway. Doubles as proof that the Paid status came from a real gateway response.</description>
    <label>Payment Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>