force-app/main/default/objects/Invoice__c/validationRules/Paid_Requires_Reference.validationRule-meta.xml
<ValidationRule>
    <fullName>Paid_Requires_Reference</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, "Paid"), ISBLANK(Payment_Reference__c))</errorConditionFormula>
    <errorMessage>An invoice cannot be marked Paid without the gateway payment reference.</errorMessage>
</ValidationRule>